barebone example from review on 24 June

--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Project Name</title>
+  <title>Reeadr</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/vendor/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body ng-app="Reeadr">
 
-  <div class="container">
-
-  </div>
+  <div class="container" ng-view></div>
 
   <!-- VENDOR -->
   <script src="js/vendor/jquery.js"></script>
