--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,9 @@
 </head>
 <body ng-app="Reeadr">
 
-  <div class="container" ng-view></div>
+  <div class="container" ng-controller="BooksList as vm">
+    <h1>{{ vm.pageName }}</h1>
+  </div>
 
   <!-- VENDOR -->
   <script src="js/vendor/jquery.js"></script>
