--- a/app/index.html
+++ b/app/index.html
@@ -4,10 +4,19 @@
   <title>Reeadr</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/vendor/normalize.css">
+  <link rel="stylesheet" href="css/vendor/normalize.css">
+  <link rel="stylesheet" href="css/vendor/foundation.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body ng-app="Reeadr">
 
+  <nav ng-controller="NavCtrl">
+    <a href="#/">Home</a>
+    <a href="#/addedit">Add/Edit</a>
+    <a href="#/about">About</a>
+  </nav>
+
+  <!-- var vm = new Bookslist -->
   <div class="container" ng-controller="BooksList as vm">
     <h1>{{ vm.pageName }}</h1>
   </div>
