--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,12 @@
 </head>
 <body ng-app="Reeadr">
 
-  <nav ng-controller="NavCtrl">
-    <a href="#/">Home</a>
+  <nav ng-controller="NavCtrl" class="top-bar">
+    <ul class="title-area">
+      <li class="name">
+        <h1><a href="#/">Reeadr</a></h1>
+      </li>
+    </ul>
     <a href="#/add_edit">Add/Edit</a>
   </nav>
 
