met minimum requirements for assignment

--- a/app/js/book/add.tpl.html
+++ b/app/js/book/add.tpl.html
@@ -1,4 +1,4 @@
-<h3>Add/Edit a book</h3>
+<h3>Add a book</h3>
 <form ng-submit="addBook(book)">
   <input type="text" ng-model="book.title" placeholder="Title">
   <input type="text" ng-model="book.author" placeholder="Author">
@@ -10,5 +10,5 @@
       <option value="toRead">To Read</option>
     </select>
   </label>
-  <button>Add/Edit</button>
+  <button>Add</button>
 </form>
