--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,10 @@
         <h1><a href="#/">Reeadr</a></h1>
       </li>
     </ul>
-    <a href="#/add_edit">Add/Edit</a>
+    <a href="#/add">Add a book</a>
   </nav>
 
-  <div class="container" ng-view></div>
+  <div class="container small-6 large-8 columns" ng-view></div>
 
   <!-- VENDOR -->
   <script src="js/vendor/jquery.js"></script>
