--- a/app/js/book/home.tpl.html
+++ b/app/js/book/home.tpl.html
@@ -6,7 +6,7 @@
       {{ book.title }} by {{ book.author }}
     </a>
     <a role="button" class="button" ng-click="deleteMe(book)">Delete</a>
-    <a role="button" class="button" ng-click="editMe(book)">Edit</a>
+    <a role="button" class="button" href="#/edit/{{ book.objectId }}">Edit</a>
   </li>
 </ul>
 
