--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <title>Reeadr</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/vendor/normalize.css">
-  <link rel="stylesheet" href="css/vendor/normalize.css">
+  <link rel="stylesheet" href="css/vendor/font-awesome.css">
   <link rel="stylesheet" href="css/vendor/foundation.css">
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -16,7 +16,24 @@
         <h1><a href="#/">Reeadr</a></h1>
       </li>
     </ul>
-    <a href="#/add">Add a book</a>
+
+    <section class="top-bar-section">
+    <!-- Left Nav Section -->
+      <ul class="left">
+        <li><a href="#/add">Add a book</a></li>
+      </ul>
+
+    <!-- Right Nav Section -->
+      <ul class="right">
+        <li class="has-dropdown">
+          <a href="#/">Start adding books!</a>
+          <ul class="dropdown">
+            <li><a href="#/login">Log In</a></li>
+            <li><a href="#/register">Register</a></li>
+          </ul>
+        </li>
+      </ul>
+    </section>
   </nav>
 
   <div class="container small-6 large-8 columns" ng-view></div>
