--- a/app/js/book/bookinfo.tpl.html
+++ b/app/js/book/bookinfo.tpl.html
@@ -9,4 +9,9 @@
 <ul>
   <li>Title: {{ book.title }}</li>
   <li>Author: {{ book.author }}</li>
+  <li>Added on: {{ book.createdAt | date:'medium' }}</li>
+  <li>Updated on: {{ book.updatedAt | date:'medium' }}</li>
 </ul>
+
+<a role="button" class="button" href="#/edit/{{ book.objectId }}" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
+<a role="button" class="button" ng-click="deleteMe(book)" title="Delete"><i class="fa fa-trash-o"></i></a>
