--- a/app/js/book/home.tpl.html
+++ b/app/js/book/home.tpl.html
@@ -5,12 +5,23 @@
     <a href="#/book/{{ book.objectId }}">
       {{ book.title }} by {{ book.author }}
     </a>
-    <a role="button" class="button" ng-click="deleteMe(book)">Delete</a>
-    <a role="button" class="button" href="#/edit/{{ book.objectId }}">Edit</a>
   </li>
 </ul>
 
 <a href="#/toread"><h2>I want to read...</h2></a>
+<ul class="inline-list">
+  <li ng-if="book.readstatus === 'toRead'" ng-repeat="book in bookList">
+    <a href="#/book/{{ book.objectId }}">
+      <img src="http://covers.openlibrary.org/b/isbn/{{ book.isbn }}-S.jpg">
+    </a>
+  </li>
+</ul>
 
 <a href="#/alreadyread"><h2>I have already read...</h2></a>
-
+<ul class="inline-list">
+  <li ng-if="book.readstatus === 'alreadyRead'" ng-repeat="book in bookList">
+    <a href="#/book/{{ book.objectId }}">
+      <img src="http://covers.openlibrary.org/b/isbn/{{ book.isbn }}-S.jpg">
+    </a>
+  </li>
+</ul>
